# humanoid_cotrain_transformer

./: .gitignore  .gitmodules  LICENSE  PROJECT_PLAN_1.md  pyproject.toml  requirements.txt
cotrain/: __init__.py  _compat.py
cotrain/data/pipelines/: __init__.py  bridge.py  shards.py  window.py
cotrain/data/schemas/: __init__.py  episode.py  manifest.py
cotrain/eval/: __init__.py  alignment_probe.py  parity_dino.py
cotrain/models/encoders/: __init__.py  dino.py
cotrain/models/heads/: __init__.py  output.py  projection.py
cotrain/models/transformer/: __init__.py  backbone.py  blocks.py  sequence.py
cotrain/scripts/: build_grain_shards.py  generate_synthetic_data.py  preprocess_robot.py  train.py  validate_dataset.py
cotrain/training/: __init__.py  checkpointing.py  losses.py  masking.py  sampler.py  sharding.py  trainer.py
tests/: test_alignment_probe.py  test_bridge_signals.py  test_build_grain_shards.py  test_checkpointing.py  test_dino_encoder.py  test_losses.py  test_masking.py  test_preprocess_robot.py  test_projection_heads.py  test_sampler.py  test_sequence_assembly.py  test_trainer_e2e.py  test_trainer_smoke.py  test_transformer.py  test_validate_dataset.py  test_window_reader.py
